ISS-11-17-45 Initial Fix  Main Elements Alignment

--- a/styles/how-strensiq-helps.css
+++ b/styles/how-strensiq-helps.css
@@ -416,9 +416,15 @@
         bottom: 1.5rem;
     }
 
+
     .how-sq-helps .hero-box {
         position: relative;
         left: 5%
+    }
+
+    [data-module=PageSubnav] {
+        border-top-left-radius: 100px;
+        background-color: var(--white);
     }
 }
 
